# TinyErode

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  TinyErode.h  erode.hpp  landbrush.cpp  landbrush.h  landbrush_opengl.cpp  landbrush_opengl.h  landbrush_opengl_internal.h
app/: App.cpp  App.h  CMakeLists.txt  Config.h  ControlWidget.cpp  ControlWidget.h  LayerView.cpp  LayerView.h  OpenGLRenderbuffer.h  OpenGLShaderProgram.cpp  OpenGLTexture2D.cpp  OpenGLTexture2D.h  Renderer.cpp  SimState.cpp  SimState.h  Terrain.cpp  TerrainJob.cpp  Viewport.cpp  extension.h  main.cpp  python.cpp  run.cpp  run.h
app/cmake/: implot.cmake  pybind11.cmake
app/glad/: CMakeLists.txt
app/glad/include/glad/: glad.h
app/imgui/: CMakeLists.txt
app/stb/: CMakeLists.txt
docs/: README.md  shaders.md
example/: CMakeLists.txt  example.cpp  main.cpp
examples/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  debug.cpp  energy_conservation.cpp  main.cpp
tests/: CMakeLists.txt  debug.cpp  debug.hpp  main.cpp  stb_impl.cpp  waterflow.cpp
viewer/: CMakeLists.txt  ErosionFilter.cpp  ErosionFilter.h  NoiseFilter.cpp  NoiseFilter.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRenderbuffer.cpp  OpenGLShader.h  OpenGLShaderProgram.h  OpenGLTexture2D.cpp  OpenGLVertexBuffer.h  Renderer.cpp  Renderer.h  Terrain.cpp  Terrain.h  app.cpp  help.cpp  help.h  layer_view.cpp  layer_view.h  main.cpp  main_menu_bar.cpp  main_menu_bar.h  ui_flags.cpp  ui_flags.h  viewport.cpp  viewport.h
viewer/glad/: CMakeLists.txt
viewer/glad/include/GLES3/: gl3.h
viewer/glad/src/: glad.c
viewer/imgui/: CMakeLists.txt
viewer/stb/: CMakeLists.txt
